Updated wps module pom to make it independently buildable