@@ -11,13 +11,7 @@
              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
              xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                                  http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <parent>
-        <groupId>org.geotools</groupId>
-        <artifactId>geotools</artifactId>
-        <version>8-SNAPSHOT</version>
-    </parent>
+   <modelVersion>4.0.0</modelVersion>
 
 
   <!-- =========================================================== -->
@@ -25,8 +19,27 @@
   <!-- =========================================================== -->
     <groupId>it.geosolutions</groupId>
     <artifactId>gt-process-destination</artifactId>
+	<version>8-ENTERPRISE-SNAPSHOT-DESTINATION-20140328</version>
     <packaging>jar</packaging>
     <name>Destination Project Processes</name>
+	
+	<properties>
+		<gs.version>2.2-ENTERPRISE-SNAPSHOT-DESTINATION-20140328</gs.version>
+		<gt.version>8-ENTERPRISE-SNAPSHOT-DESTINATION-20140328</gt.version>
+		<java.awt.headless>true</java.awt.headless>
+		<jvm.opts></jvm.opts>
+		<jalopy.phase>disabled</jalopy.phase>
+		<jalopy.srcExcludesPattern>disabled</jalopy.srcExcludesPattern>
+		<test.maxHeapSize>512M</test.maxHeapSize>
+		<test.maxPermSize>128M</test.maxPermSize>
+		<test.exclude.pattern>none</test.exclude.pattern>
+		<remoteOwsTests>false</remoteOwsTests>
+		<maven.build.timestamp.format>dd-MMM-yyyy HH:mm</maven.build.timestamp.format>
+		<build.timestamp>${maven.build.timestamp}</build.timestamp>
+		<build.hudsonId>-1</build.hudsonId>
+		<fork.javac>true</fork.javac>
+		<javac.maxHeapSize>256m</javac.maxHeapSize>
+	  </properties>
     
 
     <description>
@@ -58,9 +71,6 @@
         </developer>
     </developers>
 
-    <properties>
-        <gs.version>2.2-ENTERPRISE-SNAPSHOT-DESTINATION-20140328</gs.version>
-    </properties>
   <!-- =========================================================== -->
   <!--     Dependency Mangement                                    -->
   <!-- =========================================================== -->
@@ -125,6 +135,184 @@
         </dependency>
     </dependencies>
 
+	<build>
+  <plugins>
+  
+   <!-- compilation -->
+   <plugin>
+     <groupId>org.apache.maven.plugins</groupId>
+     <artifactId>maven-compiler-plugin</artifactId>
+     <version>2.3.2</version>
+     <configuration>
+       <source>1.6</source>
+       <target>1.6</target>
+       <debug>true</debug>
+       <encoding>UTF-8</encoding>
+       <!-- 
+           On the win32 build box the compiler oom's due to the compiler accumulating
+           too many classes in the permanent generation, similar to GEOT-2462  
+       -->
+       <fork>${fork.javac}</fork> 
+       <maxmem>${javac.maxHeapSize}</maxmem>
+     </configuration>
+   </plugin>
+
+   <!-- resources -->
+   <plugin>
+     <groupId>org.apache.maven.plugins</groupId>
+     <artifactId>maven-resources-plugin</artifactId>
+     <configuration>
+       <encoding>UTF-8</encoding>
+     </configuration>
+   </plugin>
+
+   <!-- unit testing -->
+   <plugin>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <configuration>
+     <source>1.5</source>
+     <target>1.5</target>
+     <includes>
+      <include>**/*Test.java</include>
+     </includes>
+     <excludes>
+      <exclude>${test.exclude.pattern}</exclude>
+     </excludes>
+     <forkMode>once</forkMode>
+     <argLine>-Xmx${test.maxHeapSize} -XX:MaxPermSize=${test.maxPermSize} -enableassertions ${jvm.opts} -Djava.awt.headless=${java.awt.headless} -DremoteOwsTests=${remoteOwsTests}</argLine>
+     <printSummary>true</printSummary>
+     <testFailureIgnore>${allow.test.failure.ignore}</testFailureIgnore>
+    </configuration>
+   </plugin>
+
+   <!-- artifact assembly -->
+   <plugin>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <version>2.1</version>
+    <configuration>
+     <descriptors>
+      <descriptor>release/src.xml</descriptor>
+      <descriptor>release/war.xml</descriptor>
+      <descriptor>release/javadoc.xml</descriptor>
+      <descriptor>release/bin.xml</descriptor>
+      <descriptor>release/ext-monitor.xml</descriptor>
+      <descriptor>release/ext-monitor-hibernate.xml</descriptor>
+      <descriptor>release/ext-control-flow.xml</descriptor>
+      <descriptor>release/ext-wps.xml</descriptor>
+      <descriptor>release/ext-geofence.xml</descriptor>
+     </descriptors>
+     <finalName>geoserver-2.2-ENTERPRISE-SNAPSHOT-DESTINATION-20140328</finalName>
+     <outputDirectory>${project.build.directory}/release</outputDirectory>
+    </configuration>
+   </plugin>
+
+   <!-- code coverage -->
+   <plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>cobertura-maven-plugin</artifactId>
+    <executions>
+     <execution>
+      <goals>
+       <goal>clean</goal>
+      </goals>
+     </execution>
+    </executions>
+   </plugin>
+
+   <!-- eclipse ide integration -->
+   <plugin>
+    <artifactId>maven-eclipse-plugin</artifactId>
+    <version>2.4</version>
+    <configuration>
+     <!--downloadSources>true</downloadSources-->
+     <additionalProjectnatures>
+      <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
+     </additionalProjectnatures>
+    </configuration>
+   </plugin>
+
+   <plugin>
+	<artifactId>maven-jar-plugin</artifactId>
+	<executions>
+		<execution>
+			<phase>package</phase>
+			<goals>
+				<goal>test-jar</goal>
+			</goals>
+		</execution>
+	</executions>
+	<configuration>
+		<archive>
+			<manifest>
+				<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+				<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+			</manifest>
+			<manifestEntries>
+				<GeoServerModule>core</GeoServerModule>
+				<Application-Name>${project.build.finalname}</Application-Name>
+				<Project-Version>${project.version}</Project-Version>
+				<Iteration-Name>${iteration}</Iteration-Name>
+				<Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
+				<Git-Revision>${build.commit.id}</Git-Revision>
+			</manifestEntries>
+		</archive>
+	</configuration>
+   </plugin>
+
+   <plugin>
+    <inherited>true</inherited>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-source-plugin</artifactId>
+    <configuration>
+     <attach>true</attach>
+    </configuration>
+    <executions>
+     <execution>
+      <id>attach-sources</id>
+      <goals>
+       <goal>jar</goal>
+       <goal>test-jar</goal>
+      </goals>
+     </execution>
+    </executions>
+   </plugin>
+
+   <!-- initialize git revision info -->
+   <plugin>
+     <groupId>pl.project13.maven</groupId>
+     <artifactId>git-commit-id-plugin</artifactId>
+     <version>2.0.4</version>
+     <executions>
+       <execution>
+         <goals>
+           <goal>revision</goal>
+         </goals>
+       </execution>
+     </executions>
+     <configuration>
+       <prefix>build</prefix>
+       <failOnNoGitDirectory>false</failOnNoGitDirectory>
+       <skipPoms>false</skipPoms>
+       <verbose>false</verbose>
+     </configuration>
+   </plugin>
+
+  </plugins>
+  <extensions>
+    <extension>
+      <groupId>org.apache.maven.wagon</groupId>
+      <artifactId>wagon-webdav</artifactId>
+      <version>1.0-beta-2</version>
+    </extension>
+      <extension>                                  
+       <groupId>org.apache.maven.wagon</groupId>   
+       <artifactId>wagon-ftp</artifactId>           
+       <version>1.0-beta-2</version>               
+      </extension>     
+  </extensions>
+
+ </build>
+	
   <!-- ================================================================== -->
   <!-- Repositories. This is where Maven looks for dependencies. The -->
   <!-- Maven repository is implicit and doesn't need to be specified. -->
